[tool.poetry]
name = "image-detection-yolov3"
version = "0.1.0"
description = ""
authors = ["CarolBrandao <bcarol744@gmail.com>"]

[tool.poetry.scripts]
my-script = "image_detection_yolov3.main:start"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipython = "^8.7.0"
cvlib = "0.2.6"
opencv-python = "^4.6.0"
opencv-python-headless = "4.5.3.56"
Pillow = "8.4.0."
tensorflow = "2.7.0"
uvicorn = "0.16.0"
fastapi = "0.70.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
